fixed squished images

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -22,6 +22,12 @@
       img {
         width: 130px;
         height: 80px;
+        object-fit: cover;
+        z-index: 1;
+        position: relative;
+        -moz-transition: all 0.3s;
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s;
         background-size: cover;
       }
       p {
